# relora-pico

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.sh  slurm-5635242.out
configs/: hpc_intr_2.yaml  hpc_intr_4.yaml  hpc_intr_pico.yaml  hpc_intr_relora.yaml  hpc_intr_relora_small.yaml  local.yaml  local_relora.yaml  pico-relora-small-sn.yaml  pico-relora-small.yaml  pico-relora-tiny-sn.yaml  pico-relora-tiny.yaml
dev_scripts/: plot_lr_scheduler.py
notebooks/: anisotropy.ipynb  attn-scores.ipynb  baseline_blimp.ipynb  baseline_blimp.py  blimp-hypo.ipynb  blimp-long-plots.ipynb  blimp-phen-hard.ipynb  blimp-plots-strip.ipynb  blimp-plots-violin.ipynb  blimp-plots.ipynb  cka-plots.ipynb  cond-num-grads.ipynb  cond-num.ipynb  ewok-plots-strip.ipynb  for-pico-paper.ipynb  full-attn-scores.ipynb  learning-dynamics.ipynb  lr-schedulers.ipynb  per-grads.ipynb  per.ipynb  run-metadata.ipynb  sparsity.ipynb  training-plots-time.ipynb  training-plots.ipynb  trn-for-paper.ipynb  vis-acts.ipynb
notebooks/blimp_results_small/: step_0.json  step_1000.json  step_10000.json  step_11000.json  step_12000.json  step_13000.json  step_14000.json  step_15000.json  step_16000.json  step_17000.json  step_18000.json  step_19000.json  step_2000.json  step_20000.json  step_21000.json  step_22000.json  step_23000.json  step_24000.json  step_25000.json  step_26000.json  step_27000.json  step_28000.json  step_29000.json  step_3000.json  (+29 more)
scripts/: train.py
slurm/: relora-small-sn.wilkes3  relora-small.wilkes3  relora-tiny-sn.wilkes3  relora-tiny.wilkes3
(+711 files in other folders)
