[tool.poetry]
name = "relora-pico"
version = "0.1.0"
description = "A framework for training small language models and analyzing their learning dynamics. Includes an implementation of ReLoRA."
authors = ["Richard Diehl Martinez <richarddiehl@gmail.com>", "Yuval Weiss <yuvalweiss03@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
train = "scripts.train:main"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
lightning = "^2.4.0"
click = "^8.1.7"
wandb = "^0.18.1"
huggingface-hub = {extras = ["cli"], version = "^0.30.0"}
datasets = "^3.0.1,<3.2.0"
transformers = "^4.49"
pre-commit = "^4.0.1"
torch = "^2.5.1"
evaluate = "^0.4.3"
deepspeed = "^0.16.2"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 109

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "D1", "D417", "D417", "D419"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "D"]